Fix searchbox show hide. Fix reset autocomplete field in responsive design. Fix z-index back button in deals details responsive design

--- a/app/assets/stylesheets/pages/deals_page.scss
+++ b/app/assets/stylesheets/pages/deals_page.scss
@@ -464,6 +464,7 @@
     background-position: 0px 0px;
     -webkit-animation: arrowmove2 2s infinite; /* Chrome, Safari, Opera */
     animation: arrowmove2 2s infinite;
+    cursor: pointer;
   }
 }
 
